--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Shields.io Developers <team@shields.io> and contributors"]
 edition = "2018"
 publish = false
+license = "Apache-2.0 or MIT"
 
 [dependencies]
