--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,16 @@ publish = false
 license = "Apache-2.0 or MIT"
 
 [dependencies]
+cairo-rs = { version = "0.8.1", features = ["png"] }
+cfg-if = "0.1.10"
+gio = { version = "0.8.1", features = ["v2_50"] }
+glib = "0.9.3"
 hyper = "0.13.7"
-tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
 lazy_static = "1.4.0"
+librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg" }
+reqwest = { version = "0.10.7", features = ["default-tls"] }
+tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
+url = "2.1.1"
+
+[dev-dependencies]
+mockall = "0.7.2"
