--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,7 +42,7 @@ jobs:
           override: true
 
       - name: Install tools
-        run: sudo apt install libgtk-3-dev -y
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
 
       - name: Add clippy
         run: rustup component add clippy
@@ -65,7 +65,7 @@ jobs:
           override: true
 
       - name: Install tools
-        run: sudo apt install libgtk-3-dev -y
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
 
       # TODO: incorporate code coverage with tarpaulin or grcov
       - name: Run tests
@@ -89,7 +89,7 @@ jobs:
           override: true
 
       - name: Install tools
-        run: sudo apt install libgtk-3-dev -y
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
 
       - name: Compile
         uses: actions-rs/cargo@v1
