--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ glib = "0.9.3"
 hyper = "0.13.7"
 lazy_static = "1.4.0"
 librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg" }
+quick-xml = "0.18.1"
 reqwest = { version = "0.10.7", features = ["default-tls"] }
 tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
 url = "2.1.1"
