Core raster proxy implementation (#6)
* fix: cleanup server routing

* feat: add core implementation

* ci: add tool setup to GHA workflow

* feat: add letter-spacing calc

* refactor: update raster for including letter spacing

* chore: minor repo meta file tweaks

* ci: try to get actions apt install working

* feat: wire up e2e svg preprocessing

* deploy: ensure Verdana font avail in docker image

* tests: add some more tests and fixtures

* chore: fix lint issue by bumping mockall

* feat: allow setting upstream svg provider url via env var

* refactor: improve error handling and logging in the server

* fix: change env var loading

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,6 +41,9 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Install tools
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
+
       - name: Add clippy
         run: rustup component add clippy
 
@@ -60,6 +63,9 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+
+      - name: Install tools
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
 
       # TODO: incorporate code coverage with tarpaulin or grcov
       - name: Run tests
@@ -81,6 +87,9 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+
+      - name: Install tools
+        run: sudo apt update && sudo apt install libgtk-3-dev -y
 
       - name: Compile
         uses: actions-rs/cargo@v1
