--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,8 +24,7 @@ jobs:
         run: rustup component add rustfmt
 
       - name: rustfmt
-        # TODO: change to `cargo fmt --check` after rustfmt 2.0 release
-        run: cargo fmt -- --check
+        run: cargo fmt --check
 
   lint:
     name: lint
