--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -94,3 +94,46 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
+
+  visual-regression-tests:
+    name: visual-regression-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Node JS 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install jq
+        run: |
+          sudo apt-get -qq update
+          sudo apt-get install -y jq
+
+      - name: Build Docker Image
+        run: docker build . -t squint-local
+
+      - name: Start Squint Container
+        run: docker run -d -p 3001:3001 --name local-squint-container squint-local
+
+      - name: Install testing packages
+        run: |
+          cd visual_regression_testing
+          npm ci
+
+      - name: Run Visual Regression Tests
+        run: |
+          cd visual_regression_testing
+          ./compare.sh
+
+      - name: Archive diffs
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: diffs
+          path: visual_regression_testing/diffs
+
+      - name: Stop Squint Container
+        run: docker stop local-squint-container
