--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,18 @@
 version: 2
 updates:
-- package-ecosystem: cargo
-  directory: '/'
-  schedule:
-    interval: weekly
-    day: monday
-    time: '12:00'
-  open-pull-requests-limit: 20
-  labels:
-  - dependencies
+
+  - package-ecosystem: cargo
+    directory: '/'
+    schedule:
+      interval: weekly
+      day: monday
+      time: '12:00'
+    open-pull-requests-limit: 20
+
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: weekly
+      day: monday
+      time: '12:00'
+    open-pull-requests-limit: 20
